<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <artifactId>server</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>client</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <parent>
    <groupId>ru.mauveferret</groupId>
    <artifactId>ApparatusAutomatizer</artifactId>
    <version>1.0-SNAPSHOT</version>
    <relativePath>../pom.xml</relativePath>
  </parent>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.7</maven.compiler.source>
    <maven.compiler.target>1.7</maven.compiler.target>
    <maven.compiler.release>11</maven.compiler.release>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.scream3r</groupId>
      <artifactId>jssc</artifactId>
      <version>2.8.0</version>
    </dependency>
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.4</version>
    </dependency>
    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.9</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>com.akathist.maven.plugins.launch4j</groupId>
        <artifactId>launch4j-maven-plugin</artifactId>
        <version>1.7.25</version>
        <executions>
          <execution>
            <id>l4j-clui</id>
            <phase>package</phase>
            <goals><goal>launch4j</goal></goals>
            <configuration>
              <headerType>gui</headerType>
              <jar>${project.build.directory}/${project.artifactId}-${project.version}.jar</jar>
              <outfile>${project.build.directory}/${project.artifactId}.exe</outfile>
              <errTitle>some went wrong</errTitle>
              <classPath>
                <mainClass>ru.mauveferret.Main</mainClass>
                <addDependencies>true</addDependencies>
                <preCp>anything</preCp>
              </classPath>
              <jre>
                <minVersion>1.5.0</minVersion>
                <opts>
                  <opt>-Djava.endorsed.dirs=./endorsed</opt>
                </opts>
              </jre>
              <versionInfo>
                <fileVersion>1.0.0.0</fileVersion>
                <txtFileVersion>snapshot</txtFileVersion>
                <fileDescription>program for Mephist tokamak control</fileDescription>
                <copyright>mauveferret</copyright>
                <productVersion>1.0.0.0</productVersion>
                <txtProductVersion>txt product version</txtProductVersion>
                <productName>E-N-C-C</productName>
                <internalName>ccne</internalName>
                <originalFilename>mephist.exe</originalFilename>
              </versionInfo>
            </configuration>
          </execution>
        </executions>
      </plugin>


    </plugins>
  </build>
</project>
